2013-04-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for FAL, including soft reference parser, resolves #47150

2013-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #47516

2013-04-12 Roberto Presedo (Cobweb)  <typo3@cobweb.ch>

	* Expanded PAGE_STATUS feature to use page id's, resolves #43128

2013-04-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made full usage of centralized debug and messaging API, resolves #38397
	* Verified compatibility with TYPO3 CMS 6.0, resolves #47149
	* Allowed ### to be displayed in content using escaping, resolves #41993

2013-04-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new API for accessing controller properties, resolves #47130

2013-01-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected error in fetching related controller in BE mapping interface, resolves #44364
	* Released to TER as version 1.5.2

2012-12-20 Roberto Presedo (Cobweb)  <typo3@cobweb.ch>

	* Corrected code to stop execution after redirection, resolves #44158

2012-09-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected forcing useCacheHash configuration, resolves #41039
	* Released to TER as version 1.5.1

2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.5.0

2012-06-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added definition of search fields, resolves #38487

2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, resolves #38396

2012-06-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.4.0

2012-05-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added a MEDIA element type, resolves #37211

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Dropped usage of tx_tesseract_utilities::wrapMessage(), resolves #35602