@@ -35,6 +35,11 @@ namespace Tesseract\Templatedisplay\Service;
  */
 class SoftReferenceParser implements \TYPO3\CMS\Core\SingletonInterface {
 	/**
+	 * @var string Content of the file referenced in the template field (if any)
+	 */
+	protected $templateCode = '';
+
+	/**
 	 * Parses the template field for a "file:xxx" pattern. If found it will try to  match it to a sys_file
 	 * entry and return the relevant reference.
 	 *
@@ -50,11 +55,17 @@ class SoftReferenceParser implements \TYPO3\CMS\Core\SingletonInterface {
 	 */
 	public function findRef($table, $field, $uid, $content, $spKey, $parameters, $structurePath = '') {
 		$elements = array();
+		// Identify a sys_file reference
 		try {
 			$elements[] = $this->parseForSysFile($content);
 		}
 		catch (\Exception $e) {
 			// Nothing to do
+		}
+
+		// If a template was found, parse it for references to other records
+		if (!empty($this->templateCode)) {
+			$elements = array_merge($elements, $this->parseForRecordReferences());
 		}
 
 		// If at least one reference was found, return the list of references
@@ -81,8 +92,9 @@ class SoftReferenceParser implements \TYPO3\CMS\Core\SingletonInterface {
 		if (stripos($content, 'FILE:') === 0) {
 			// Remove the "FILE:" key and cast the rest to int
 			$sysFileId = intval(str_ireplace('FILE:', '' , $content));
-			// If it's a positive number, prepare information for registering a reference
+			// If it's a positive number, load the template's content and prepare information for registering a reference
 			if ($sysFileId > 0) {
+				$this->loadTemplateFile($sysFileId);
 				return array(
 					'matchString' => $content,
 					'subst' => array(
@@ -93,6 +105,55 @@ class SoftReferenceParser implements \TYPO3\CMS\Core\SingletonInterface {
 			}
 		}
 		throw new \Exception('No system file reference found', 1371471101);
+	}
+
+	/**
+	 * Loads the content of a file, as given by a file reference
+	 *
+	 * @param integer $id Id of a sys_file
+	 */
+	protected function loadTemplateFile($id) {
+		try {
+			$fileObject = \TYPO3\CMS\Core\Resource\ResourceFactory::getInstance()->getFileObject($id);
+			// A valid reference was returned, get the file's relative path
+			if ($fileObject instanceof \TYPO3\CMS\Core\Resource\FileInterface) {
+				$relativePath = $fileObject->getPublicUrl();
+				// Make path absolute
+				$fullPath = \TYPO3\CMS\Core\Utility\GeneralUtility::getFileAbsFileName($relativePath);
+				$this->templateCode = file_get_contents($fullPath);
+			}
+		}
+		catch (\Exception $e) {
+			// Nothing to do
+		}
+	}
+
+	/**
+	 * Parses the loaded template code and identifies references to records (in markers using the
+	 * ###RECORD(tt_content, xxx)### syntax)
+	 *
+	 * @return array
+	 */
+	protected function parseForRecordReferences() {
+		$matches = array();
+		$references = array();
+
+		// Match ###RECORD(tt_content, xxx)### patterns
+		if (preg_match_all("/#{3}RECORD\((.+),(.+)\)#{3}/isU", $this->templateCode, $matches, PREG_SET_ORDER)) {
+			// Loop on all matches and register them as references
+			foreach ($matches as $match) {
+				$table = trim($match[1]);
+				$uid = trim($match[2]);
+				$references[] =  array(
+					'matchString' => $match[0],
+					'subst' => array(
+						'type' => 'db',
+						'recordRef' => $table . ':' . $uid
+					)
+				);
+			}
+		}
+		return $references;
 	}
 }
 
